--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
   run-postman-test:
     runs-on: ubuntu-latest
 
-  steps:
+    steps:
     - name: checkout the code
       uses: actions/checkout@v6-beta
 
@@ -35,6 +35,14 @@ jobs:
            -e 'QA.postman_environment .json' \
            -d 'testData.csv'\
            -r cli,htmlextra
+
+
+    - name: Upload Report
+      uses: actions/upload-artifact@v5.0.0
+      with: 
+        name: Newman Report
+        path: newman\*.html
+        
 
 
       
