--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
 
 
     - name: Upload Report
+      if : always()
       uses: actions/upload-artifact@v5.0.0
       with: 
         name: Newman Report
