--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,7 +42,7 @@ jobs:
       uses: actions/upload-artifact@v5.0.0
       with: 
         name: Newman Report
-        path: newman\*.html
+        path: newman/*.html
         
 
 
