--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,9 +4,9 @@ on:
     branches: [main]
   workflow_dispatch: 
   schedule: 
-    - cron : 30 2 * * * #8:00 AM IST Everyday
-    - cron : 30 13 * * * #7:00 PM IST Everyday
-    - cron : 0 06 * * 1-5 #11:30 AM IST Monday to Friday
+   # - cron : 30 2 * * * #8:00 AM IST Everyday
+   # - cron : 30 13 * * * #7:00 PM IST Everyday
+    - cron : 0 06 * * 0 #11:30 AM IST Sunday
 
 
 
@@ -51,7 +51,30 @@ jobs:
       with: 
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: newman/
-    
+
+
+    - name: Sending Email notifications
+      if : always()
+      uses: dawidd6/action-send-mail@v6
+      with:
+        server_address: smtp.gmail.con
+        server_port: 465
+        username: ${{ secrets.EMAIL_username}}
+        password: ${{ secrets.EMAIL_password}}
+        subject: Postman_Inwarranty_Flow Test Exexution Report
+        to: muskan7razdan@gmail.com
+        from: ${{ secrets.EMAIL_username}}
+        body: |
+          Hi,
+            To view the Postman Inwarranty Flow click herer: https://muskanrazdan.github.io/Postman_Inwarranty_Flow/
+
+
+          Thanks,
+          Github Actions
+            
+      
+  
+   
         
 
 
