--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,11 +59,11 @@ jobs:
       with:
         server_address: smtp.gmail.con
         server_port: 465
-        username: ${{ secrets.EMAIL_username}}
-        password: ${{ secrets.EMAIL_password}}
+        username: ${{ secrets.EMAIL_USERNAME}}
+        password: ${{ secrets.EMAIL_PASSWORD}}
         subject: Postman_Inwarranty_Flow Test Exexution Report
         to: muskan7razdan@gmail.com
-        from: ${{ secrets.EMAIL_username}}
+        from: ${{ secrets.EMAIL_USERNAME}}
         body: |
           Hi,
             To view the Postman Inwarranty Flow click herer: https://muskanrazdan.github.io/Postman_Inwarranty_Flow/
