--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,6 +54,7 @@ jobs:
 
 
     - name: Debug email username
+      if : always()
       run: |
         echo "Username length: ${#EMAIL_USERNAME}"
         echo "Password length: ${#EMAIL_PASSWORD}"
@@ -69,10 +70,10 @@ jobs:
           server_address: smtp.gmail.com
           server_port: 465
           username: ${{ secrets.EMAIL_USERNAME }}
-          password: ${{ secrets.EMAIL_APP_PASSWORD }}     
+          password: ${{ secrets.EMAIL_PASSWORD }}     
           secure: true                                   
           subject: "Postman_Inwarranty_Flow Test Execution Report"
-          from: Email From Muskan Github <${{ secrets.EMAIL_USERNAME}}>
+          from: Email From Muskan Github <${{ secrets.EMAIL_USERNAME }}>
           to: muskan7razdan@gmail.com
           body: |
               Hi,
