--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,10 @@ on:
 
 
 jobs:
+  
   run-postman-test:
     runs-on: ubuntu-latest
+    environment: github-pages
 
     steps:
     - name: checkout the code
